# ChickenSandBox

./: .clang-tidy.html  .gitignore.html  .ninja_log.html  1802925_simetrica.c  CMakeCCompiler.cmake.html  CMakeCCompilerId.c.html  CMakeCache-Vitor’s MacBook Air.txt.html  CMakeCache.txt  CMakeCache.txt.html  CMakeError.log.html  CMakeLists.txt  CMakeLists.txt.html  CMakeOutput.log.html  CMakeSystem.cmake.html  LastTest.log.html  PlainText.txt.html  Project_Default.xml.html  SRC.iml.html  TargetDirectories.txt.html  algo.txt.html  algoritmo.c  build.ninja.html  cache-v2-558ac2be92b87b0d6609.json.html  cesar_cifra.c.html  clion-environment.txt.html  clion-log.txt.html  cmakeFiles-v1-88af19d61174c4140e9b.json.html  cmake_install.cmake.html  cmake_install.cmake.tmp4c479.html  codemodel-v2-85923bbb8b755f96bd30.json.html  decript.c.html  decript.html  directory-.-Debug-f5ebdc15457944623624.json.html  encripta.html  index-2022-11-13T23-07-35-0141.json.html  index.html  misc.xml.html  modules.xml.html  rules.ninja.html  target-SRC-Debug-416a49681c6951b7fdd7.json.html  (+2 more)
programacao/CPP/: vigenere.cpp
programacao/c/: 1802925_cifrasim.c  CMakeLists.txt  c_s5_21.c  euclides.c  fork05.c  main2.c  msia.c  teste.c
