cmake_minimum_required(VERSION 3.21)
project(SandBox C)

set(CMAKE_C_STANDARD 99)

add_executable(SandBox_main main.c teste2.c fork05.c msia.c euclides.c 1802925_cifrasim.c 1802925_cifrasim.c)
add_executable(SandBox_main2 main2.c)
add_executable(SandBox_teste teste.c)
add_executable(SandBox_teste2 teste2.c)
add_executable(SandBox_fork05 fork05.c)
add_executable(SandBox_msia msia.c)
add_executable(SandBox_max_min max_min.c)
add_executable(SandBox_min_vet min_vet.c)
add_executable(SandBox_max_vet max_vet.c)
add_executable(SandBox_1802925_cifrasim 1802925_cifrasim.c)
add_executable(/C:/Users/Vitor/OneDrive/Programacao/1802925_cifrasim.c)
add_executable(SandBox_euclides euclides.c cmake-build-debug/alg_euclides.c)
add_executable(SandBox_alg_euclides alg_euclides.c cmake-build-debug/alg_euclides.c cmake-build-debug/max_min.c cmake-build-debug/min_vet.c cmake-build-debug/max_vet.c c_s5_21.c)
add_executable(euclides euclides.c)
add_executable(main main.c)
add_executable(teste teste.c)
add_executable(CMakeLists CMakeLists.txt)
add_executable(1802925_cifrasim /C:/Users/Vitor/OneDrive/Programacao/1802925_cifrasim.c)